[metadata]
name = benji
summary = Cas Benji
description-file =
    README.rst
author = KhanhCT
author-email = khanhct@fpt.com.vn
home-page =
classifier =
    Environment :: CAS
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

packages =
    benji

[entry_points]
console_scripts =
    benji-command = benji.cmd.command:main
    benji-api = benji.cmd.api:main
    benji-tm = benji.cmd.taskmanager:main
